Adds the liner regression math.

--- a/notebooks/01-01-Introduction.ipynb
+++ b/notebooks/01-01-Introduction.ipynb
@@ -1,18 +1,138 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "## What is machine learning\n",
+    "\n",
+    "Machine learning (ML) is the process of discovering hidden relations\n",
+    "in historical data and use the derived model to make predictions to\n",
+    "unseen data.\n",
+    "\n",
+    "Before we start studing ML we need to have a clear understanding of\n",
+    "how it differs from what is called **traditional** programming and\n",
+    "what are the different kinds and problems that can be solved with\n",
+    "it.\n",
+    "\n",
+    "\n",
+    "## Traditional programming\n",
+    "\n",
+    "In traditional programming we are given a set predifined set of rules\n",
+    "that when used they lead us to the expected result.\n",
+    "\n",
+    "Opening in existing browser session.\n",
+    "\n",
+    "**Example**\n",
+    "\n",
+    "The most common case when it comes to computer programming, has to do with\n",
+    "solving a problem using an algorithm that consists of a decision tree\n",
+    "resembling the necessary steps to evaluate a solutions. Following this\n",
+    "approach, the solution to a problem can be implemented as a model that\n",
+    "expects a certain number of parameters that are processed and based on them\n",
+    "the solution is returned to the user. A trivial example of this type of a\n",
+    "“model” can be seen in the following python function that expects a\n",
+    "distance measured in centimeters and converts it to inches:\n",
+    "\n",
+    "\n",
+    "```python\n",
+    "def centimeters_to_inches(centimeters):\n",
+    "    return centimeters / 2.54\n",
+    "```\n",
+    "\n",
+    "## Machine learning\n",
+    "\n",
+    "In **machine learning** we know in input and the desired output and our\n",
+    "objective is to find the algorithm that will allow use to predict values to\n",
+    "new inputs that we have not seen before.\n",
+    "\n",
+    "When **training** a neural network we are passing both the input and the\n",
+    "expected output to the training function which discovers and fits a set of\n",
+    "**weights**  that resembles the relation between input and output:\n",
+    "\n",
+    "A **trained** ANN receives unseen input, uses the **weights** that were\n",
+    "found during the training phase and **predicts** the corresponding output.\n",
+    "\n",
+    "<table>\n",
+    "<tr>\n",
+    "<td><img src=\"training-ANN.png\" alt=\"Girl in a jacket\"/></td>\n",
+    "<td><img src=\"predicting-using-NN.png\" alt=\"Girl in a jacket\"/></td>\n",
+    "</tr>\n",
+    "</table>\n",
+    "\n",
+    "**Example of machine learning**\n",
+    "\n",
+    "\n",
+    "## Types of Machine learning\n",
+    "\n",
+    "**Supervised**\n",
+    "\n",
+    "In supervised learning we have both a set of inputs and also the\n",
+    "corresponding expected output (also known as labeling) and our\n",
+    "goal is to discover a function (model) that will map the input\n",
+    "to the output with the less possible error when applied to unseen\n",
+    "data (meaning when predecting values).\n",
+    "\n",
+    "Some of the most commonly used supervised algoritgms are the\n",
+    "following:\n",
+    "\n",
+    "| Algorithm |\n",
+    "| ----------- |\n",
+    "|Linear Regression|\n",
+    "|Logistic Regression|\n",
+    "|Neural Networks|\n",
+    "|Decision Trees|\n",
+    "|Support Vector Machines|\n",
+    "\n",
+    "**Unsupervised**\n",
+    "\n",
+    "In Unsupervised learning we are given sets of data without any\n",
+    "labels and our objective is to discover hidden patterns of data\n",
+    "groupings or clusters.\n",
+    "\n",
+    "Some commonly used algorithms of Unsupervised learning are the\n",
+    "following:\n",
+    "\n",
+    "\n",
+    "| Algorithm |\n",
+    "| ----------- |\n",
+    "|K-means clustering|\n",
+    "|KNN (k-nearest neighbors)|\n",
+    "|Hierarchal clustering|\n",
+    "|Anomaly detection|\n",
+    "\n",
+    "**Reinforcement learning**\n",
+    "\n",
+    "The algorithm interacts with the environmentn receiving feedback and\n",
+    "improving its actions until it reaches its goal (we will not deal\n",
+    "with this type of ML here). Some problems where Reinforcement learning\n",
+    "is applied are the following:\n",
+    "\n",
+    "|Type of problem|\n",
+    "|----------------|\n",
+    "|Autonomous car driving|\n",
+    "|Traffic light control|\n",
+    "|Gaming|\n",
+    "|Robotics|\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   },
-   "outputs": [],
-   "source": [
-    "![](backprog-1.png)"
-   ]
+   }
   }
  ],
  "metadata": {
