--- a/notebooks/01-03-nn-introduction.ipynb
+++ b/notebooks/01-03-nn-introduction.ipynb
@@ -3,19 +3,19 @@
   {
    "cell_type": "markdown",
    "id": "9f00a76e",
-   "metadata": {},
-   "source": [
-    "# INTRODUCTION  TO NEURAL NETWORKS"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0031a55b",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
     }
    },
+   "source": [
+    "# INTRODUCTION  TO NEURAL NETWORKS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "### A simplified example of Neural Network\n",
     "\n",
@@ -108,13 +108,23 @@
     "\n",
     "The above **Cost** function is a **parabola** that can be graphed as follows (assuming that $Y=0.4$):\n",
     "\n"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 22,
    "id": "c52abefb",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import functools\n",
@@ -154,7 +164,11 @@
    "cell_type": "code",
    "execution_count": 24,
    "id": "ec62e242",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -176,7 +190,11 @@
   {
    "cell_type": "markdown",
    "id": "1b672097",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "#### Find the derivative of the function\n",
     "\n",
@@ -239,7 +257,11 @@
   {
    "cell_type": "markdown",
    "id": "e313a07d",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "As we can notice from the above graphical represenation, the derivate of point is positive when it lies on the right of the minuum value and negative otherwise.  Based on this notification, we will try to approach the  value of x that minimizes the function by adding or subtracting a small step each time.\n",
     "\n",
@@ -310,7 +332,11 @@
   {
    "cell_type": "markdown",
    "id": "938e1d6e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "#### Adjusting the weight using back propagation\n",
     "\n",
@@ -367,7 +393,11 @@
   {
    "cell_type": "markdown",
    "id": "476ce47e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "#### Understanding the simpler possible ANN (consisting of only two neurons)\n",
     "\n",
@@ -389,7 +419,11 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "329c5c79",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -420,7 +454,11 @@
    "cell_type": "code",
    "execution_count": 18,
    "id": "91290708",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -538,7 +576,11 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "84ca7f8e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -562,7 +604,10 @@
    "execution_count": 20,
    "id": "4d2de755",
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -751,13 +796,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "cdcd0a5e",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "#### Generalizing for more than one synapsis\n",
     "\n",
@@ -768,13 +809,23 @@
     "\n",
     "![two-x-nn](two-x-nn.png)\n",
     "\n"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "3481ac94",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
