Updates the intro notebook.

--- a/notebooks/01-01-Introduction.ipynb
+++ b/notebooks/01-01-Introduction.ipynb
@@ -3,24 +3,30 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## What is machine learning\n",
+    "# What is machine learning\n",
     "\n",
     "Machine learning (ML) is the process of discovering hidden relations\n",
     "in historical data and use the derived model to make predictions to\n",
     "unseen data.\n",
     "\n",
-    "Before we start studing ML we need to have a clear understanding of\n",
+    "Before we start studying ML we need to have a clear understanding of\n",
     "how it differs from what is called **traditional** programming and\n",
     "what are the different kinds and problems that can be solved with\n",
     "it.\n",
     "\n",
-    "\n",
     "## Traditional programming\n",
     "\n",
-    "In traditional programming we are given a set predifined set of rules\n",
+    "In traditional programming we are given a set predefined set of rules\n",
     "that when used they lead us to the expected result.\n",
     "\n",
-    "Opening in existing browser session.\n",
+    "<table>\n",
+    "<tr>\n",
+    "<th style=\"text-align:center\">Traditional Programming</th>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td><img src=\"./images/traditional-programming.png\" alt=\"Girl in a jacket\"/></td>\n",
+    "</tr>\n",
+    "</table>\n",
     "\n",
     "**Example**\n",
     "\n",
@@ -32,7 +38,6 @@
     "the solution is returned to the user. A trivial example of this type of a\n",
     "“model” can be seen in the following python function that expects a\n",
     "distance measured in centimeters and converts it to inches:\n",
-    "\n",
     "\n",
     "```python\n",
     "def centimeters_to_inches(centimeters):\n",
@@ -54,17 +59,20 @@
     "\n",
     "<table>\n",
     "<tr>\n",
-    "<td><img src=\"training-ANN.png\" alt=\"Girl in a jacket\"/></td>\n",
-    "<td><img src=\"predicting-using-NN.png\" alt=\"Girl in a jacket\"/></td>\n",
+    "<th style=\"text-align:center\">Training</th>\n",
+    "<th style=\"text-align:center\">Predicting</th>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td><img src=\"./images/training-ANN.png\" alt=\"training ann \"/></td>\n",
+    "<td><img src=\"./images/predicting-using-NN.png\" alt=\"predicting using ann\"/></td>\n",
     "</tr>\n",
     "</table>\n",
     "\n",
-    "**Example of machine learning**\n",
     "\n",
     "\n",
-    "## Types of Machine learning\n",
+    "# Types of Machine learning\n",
     "\n",
-    "**Supervised**\n",
+    "##Supervised**\n",
     "\n",
     "In supervised learning we have both a set of inputs and also the\n",
     "corresponding expected output (also known as labeling) and our\n",
@@ -83,6 +91,35 @@
     "|Decision Trees|\n",
     "|Support Vector Machines|\n",
     "\n",
+    "**Example of supervised learning**\n",
+    "\n",
+    "Let's assume that we are given the following data that represent some\n",
+    "experiment and X is the dependent and Y the independent variables: \n",
+    "\n",
+    "<table>\n",
+    "<tr>\n",
+    "<th style=\"text-align:center\">Measurements</th>\n",
+    "<th style=\"text-align:center\">Graphical represenation</th>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td><img src=\"./images/data-for-simple-linear-regression.png\" alt=\"sample data\"/></td>\n",
+    "<td><img src=\"./images/data-for-simple-linear-regression-graph.png\" alt=\"sample data graph\"/></td>\n",
+    "</tr>\n",
+    "</table>\n",
+    "\n",
+    "A typical machine learning solution to estimate the \"rule\" that combines X to Y can\n",
+    "be a straight line as can be seen in the following graph:\n",
+    "\n",
+    "\n",
+    "<img src=\"./images/trival-solution-to-lr-example.png\" alt=\"sample data\"/>\n",
+    "\n",
+    "the best fit is expressed by a straing line equation like: $y= ax +b$ where $a=3.2$ and $b=5$:\n",
+    "\n",
+    "$\\Large y = 3.2 * x + 5$\n",
+    "\n",
+    "which is the objective of the machine learning process.\n",
+    "\n",
+    "\n",
     "**Unsupervised**\n",
     "\n",
     "In Unsupervised learning we are given sets of data without any\n",
@@ -100,6 +137,20 @@
     "|Hierarchal clustering|\n",
     "|Anomaly detection|\n",
     "\n",
+    "**An example of unsupervised learning**\n",
+    "\n",
+    "Assuming that we have the following data points:\n",
+    "\n",
+    "<img src=\"./images/example-of-data-to-cluster.png\" alt=\"sample data\"/>\n",
+    "\n",
+    "the objective of an unsupervised learning algorithm will be to break\n",
+    "down the full universe of the data points to **clusters**  as can be\n",
+    "seen here:\n",
+    "\n",
+    "<img src=\"./images/example-of-clustered_data.png\" alt=\"sample data\"/>\n",
+    "\n",
+    "\n",
+    "\n",
     "**Reinforcement learning**\n",
     "\n",
     "The algorithm interacts with the environmentn receiving feedback and\n",
@@ -113,6 +164,7 @@
     "|Traffic light control|\n",
     "|Gaming|\n",
     "|Robotics|\n",
+    "\n",
     "\n"
    ],
    "metadata": {
@@ -133,27 +185,45 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
