Updates the intro notebook.

--- a/notebooks/01-01-Introduction.ipynb
+++ b/notebooks/01-01-Introduction.ipynb
@@ -72,7 +72,7 @@
     "\n",
     "# Types of Machine learning\n",
     "\n",
-    "##Supervised**\n",
+    "## Supervised\n",
     "\n",
     "In supervised learning we have both a set of inputs and also the\n",
     "corresponding expected output (also known as labeling) and our\n",
@@ -120,7 +120,7 @@
     "which is the objective of the machine learning process.\n",
     "\n",
     "\n",
-    "**Unsupervised**\n",
+    "## Unsupervised\n",
     "\n",
     "In Unsupervised learning we are given sets of data without any\n",
     "labels and our objective is to discover hidden patterns of data\n",
@@ -137,7 +137,7 @@
     "|Hierarchal clustering|\n",
     "|Anomaly detection|\n",
     "\n",
-    "**An example of unsupervised learning**\n",
+    "**Example of unsupervised learning**\n",
     "\n",
     "Assuming that we have the following data points:\n",
     "\n",
@@ -151,7 +151,7 @@
     "\n",
     "\n",
     "\n",
-    "**Reinforcement learning**\n",
+    "## Reinforcement learning\n",
     "\n",
     "The algorithm interacts with the environmentn receiving feedback and\n",
     "improving its actions until it reaches its goal (we will not deal\n",
@@ -173,36 +173,6 @@
      "name": "#%% md\n"
     }
    }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
