--- a/notebooks/01-01-Introduction.ipynb
+++ b/notebooks/01-01-Introduction.ipynb
@@ -2,6 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# What is machine learning\n",
     "\n",
@@ -166,13 +171,26 @@
     "|Robotics|\n",
     "\n",
     "\n"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%% md\n"
+     "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
