Adds the NN for Iris dataset.

--- a/notebooks/01-04-nn-iris.ipynb
+++ b/notebooks/01-04-nn-iris.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 1,
    "id": "0062ef46",
    "metadata": {},
    "outputs": [
@@ -56,10 +56,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fde58195ea0>"
+       "<IPython.lib.display.IFrame at 0x7eff9fad38b0>"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
