Adds binary operators to introduction.

--- a/notebooks/01-01-Introduction.ipynb
+++ b/notebooks/01-01-Introduction.ipynb
@@ -29,7 +29,7 @@
     "<th style=\"text-align:center\">Traditional Programming</th>\n",
     "</tr>\n",
     "<tr>\n",
-    "<td><img src=\"./images/traditional-programming.png\" alt=\"Girl in a jacket\"/></td>\n",
+    "<td><img src=\"./images/traditional-programming.png\"/></td>\n",
     "</tr>\n",
     "</table>\n",
     "\n",
@@ -172,6 +172,88 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "### Classification and Regresssion\n",
+    "\n",
+    "The binary operators that we use in our everyday programming present some interesting \n",
+    "features that make them good to start thinking about Machine Learning.\n",
+    "\n",
+    "Let's start with the **AND** and **OR** operators and represent their behaviors as follows:\n",
+    "\n",
+    "<img src=\"./images/binary-ADD-and-OR.png\" style=\"width:420px\"/>\n",
+    "\n",
+    "Nothing new here, the **AND** operator will return **1** if both of its operands \n",
+    "are equal ot **1** while in any other case it will return **0**.  \n",
+    "\n",
+    "The **OR** operator on the other hand will return **0** if both of its operands \n",
+    "are equal to **0** and in any other case it will return **1**.\n",
+    "\n",
+    "The functionality of the **AND** and **OR** opearators can be represented \n",
+    "graphically follows:\n",
+    "\n",
+    "<img src=\"./images/AND-OR-graph.png\" style=\"width:520px\"/>\n",
+    "\n",
+    "Note that both of these graphs share a common characteristic: in both cases it is\n",
+    "possible to draw a straight line that clearly separates the two possible classes\n",
+    "as we can see here:\n",
+    "\n",
+    "<img src=\"./images/AND-OR-DIVIDING-LINE.png\" style=\"width:520px\"/>\n",
+    "\n",
+    "The \"blue\" lines in each case divide the plane to a regions that all of the \n",
+    "matching points have the same output (1 or 0).\n",
+    "\n",
+    "This approach is known as **classification** and applies to models where we \n",
+    "need to discover a **binary** value, meaning if something is this or that. This type\n",
+    "of a problem is one of the two main variants of supervised learning: \n",
+    "**regression** and **classification**.  \n",
+    "\n",
+    "In **regression** we are trying to find a specific value instead of a boolean yes or no.\n",
+    "\n",
+    "\n",
+    "#### Linear Classifier\n",
+    "\n",
+    "Problems similar to the AND or OR logical operators can be solved by a linear\n",
+    "classifier which is a mathematical model applicable if the separation among the\n",
+    "classes can be described by a straight line, a plane or a multi-plane. The following\n",
+    "graph shows two types of data that are separated by a straight line:\n",
+    "\n",
+    "<img src=\"./images/linear-classifier-example.jpg\" style=\"width:520px\"/>\n",
+    "\n",
+    "#### Regression\n",
+    "\n",
+    "Regression in ML is the process of finding a continued real value to predict a quantity. \n",
+    "An example of regression is the following (we have seen it above):\n",
+    "\n",
+    "<img src=\"./images/trival-solution-to-lr-example.png\" alt=\"sample data\"/>\n",
+    "\n",
+    "#### The XOR operator\n",
+    "\n",
+    "Now that we have seen the AND and OR opeartor let's shift our focus to the XOR operator\n",
+    "that can be modeled as follows:\n",
+    "\n",
+    "<img src=\"./images/XOR-operator.jpg\" alt=\"sample data\"/>\n",
+    "\n",
+    "The question is, can we find a straight line as before to divide the plane into\n",
+    "points with values of 1 and 0?\n",
+    "\n",
+    "\n",
+    "If you try to find this line, you will soon discover that it is \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
