Adds binary operators to introduction.

--- a/notebooks/01-01-Introduction.ipynb
+++ b/notebooks/01-01-Introduction.ipynb
@@ -245,7 +245,9 @@
     "points with values of 1 and 0?\n",
     "\n",
     "\n",
-    "If you try to find this line, you will soon discover that it is \n"
+    "If you try to find this line, you will soon discover that it is impossible to\n",
+    "draw it and this is one of the most trivial problems where a Neural Network \n",
+    "can come handy to solve as we will see soon!\n"
    ]
   },
   {
