Adds binary operators to introduction.

--- a/notebooks/01-04-nn-iris.ipynb
+++ b/notebooks/01-04-nn-iris.ipynb
@@ -538,6 +538,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 37,
+   "id": "44d80f09",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_3\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " dense_6 (Dense)             (None, 100)               500       \n",
+      "                                                                 \n",
+      " dense_7 (Dense)             (None, 3)                 303       \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 803\n",
+      "Trainable params: 803\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(model.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 28,
    "id": "f6d978fc",
    "metadata": {},
