--- a/notebooks/01-01-Introduction.ipynb
+++ b/notebooks/01-01-Introduction.ipynb
@@ -253,7 +253,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
