Adds binary operators to introduction.

--- a/notebooks/01-03-nn-introduction.ipynb
+++ b/notebooks/01-03-nn-introduction.ipynb
@@ -112,19 +112,7 @@
     "\n",
     "Now we can plot the Cost function and \n",
     "\n",
-    "<img src=\"./images/simplest-nn-image-2.png\" style=\"width:100%;\"/> "
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "<img src=\"./images/simplest-nn-image-2.png\" style=\"width:100%;\"/> "
+    "<img src=\"./images/simplest-nn-image-3.png\" style=\"width:100%;\"/> "
    ],
    "metadata": {
     "collapsed": false,
@@ -186,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 45,
    "id": "ab1b5a9c",
    "metadata": {
     "pycharm": {
@@ -197,10 +185,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f852e87f2b0>"
+       "<matplotlib.legend.Legend at 0x7f84df84ca30>"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     },
