Adds binary operators to introduction.

--- a/notebooks/01-03-nn-introduction.ipynb
+++ b/notebooks/01-03-nn-introduction.ipynb
@@ -91,6 +91,12 @@
   },
   {
    "cell_type": "markdown",
+   "id": "423aaf82",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "\n",
     "#### Understanding the problem\n",
@@ -112,70 +118,16 @@
     "\n",
     "Now we can plot the Cost function and \n",
     "\n",
-    "<img src=\"./images/simplest-nn-image-3.png\" style=\"width:100%;\"/> "
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
+    "<img src=\"./images/simplest-nn-image-3.png\" style=\"width:100%;\"/> \n",
+    "\n",
+    "<img src=\"./images/simplest-nn-image-4.png\" style=\"width:100%;\"/> \n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "a = 1.6\n",
-    "\n",
-    "E = 3.0\n",
-    "\n",
-    "f = lambda x: a * x\n",
-    "X = [ x for x in range(0, 5)]\n",
-    "Y = [f(x) for x in X]\n",
-    "plt.plot(X, Y, linewidth = 4.1);\n",
-    "plt.plot(X, [E for _ in X] , linewidth = 4.1, linestyle = '--');\n",
-    "\n",
-    "# plt.plot([1.85 for _ in range(0,5)], [y for y in range(0,5)]);\n",
-    "\n",
-    "\n",
-    "_ = plt.title(f\"y = a*x, a = {a}\")\n",
-    "\n",
-    "_ = plt.xlabel('x')\n",
-    "_ = plt.ylabel('y')\n",
-    "\n",
-    "error = lambda x: (x - E)**2\n",
-    "\n",
-    "x_values = []\n",
-    "v = 0\n",
-    "while v < 5:\n",
-    "    v += 0.1\n",
-    "    x_values.append(v)\n",
-    "\n",
-    "Y = [error(x) for x in x_values]\n",
-    "plt.plot(x_values, Y, linewidth=2.3, color=\"red\")\n",
-    "\n",
-    "\n",
-    "plt.plot([x for x in range(0, 6)], [0 for x in range(0, 6)], color=\"black\", linewidth = 4.1)\n",
-    "plt.plot([0 for x in range(0, 10)], [y for y in range(0, 10)], color=\"black\", linewidth = 4.1)\n",
-    "\n",
-    "plt.grid(color = 'gray', linestyle = '--', linewidth = 0.1)\n",
-    "\n",
-    "plt.legend(['y = a*x', \"Expected\" , 'C = (E - y) ^2'])\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "id": "ab1b5a9c",
+   "execution_count": 47,
+   "id": "ecd359fd",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -185,10 +137,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f84df84ca30>"
+       "<matplotlib.legend.Legend at 0x7f84df77f640>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -815,86 +767,7 @@
     "which can be thought as the **impact** that a particular weigtht has on\n",
     "the **Cost**.  Note though that we already have the rate of how much a change\n",
     "in the value of $\\Large x_2$ is affecting the cost $\\Large\\frac{\\partial C}{\\partial x_2}$.\n",
-    "\n",
-    "# PAY ATTENTION HERE !\n",
-    "\n",
-    "## Step 1: Calculate the next value for $\\Large w_2$\n",
-    "\n",
-    "This step is one of the MOST important to understand how backpropagation works, \n",
-    "so please read carefully:\n",
-    "\n",
-    "We want to calculate: $\\Large \\frac{\\partial C}{\\partial w_2}$ so, let's try the following trick:\n",
-    "\n",
-    "Is it possible for us to write our expression as follows?\n",
-    "\n",
-    "$\\Large \\frac{\\partial ?}{\\partial w_2} \\times \\frac{\\partial C}{\\partial ?}$\n",
-    "\n",
-    "Think now: Can we substitue $\\Large {\\partial ?}$ with something that will result \n",
-    "to two partial derivatives that is known to us? \n",
-    "\n",
-    "If we can do so then we would have our prolbem solved (applying the **CHAIN RULE** from Calculus)\n",
-    "\n",
-    "Since we already have calculated: $\\Large\\frac{\\partial C}{\\partial x_2}$\n",
-    "\n",
-    "we immediatly think if we can try the following:\n",
-    "\n",
-    "$\\Large \\frac{\\partial x_2}{\\partial w_2} \\times \\frac{\\partial C}{\\partial x_2}$\n",
-    "\n",
-    "or in other words to calculate the following expression:\n",
-    "\n",
-    "$\\Large \\frac{\\partial x_2}{\\partial w_2}$\n",
-    "\n",
-    "which expresses the impact of $\\Large w_2$ to $\\Large x_2$\n",
-    "\n",
-    "and we are in luck since this derivative is really easy to calculate:\n",
-    "\n",
-    "since $\\Large x_2 = x1 \\times w_2$ then \n",
-    "\n",
-    "$\\Large \\frac{\\partial x_2}{\\partial w_2} = x_1$\n",
-    "\n",
-    "\n",
-    "So we can now calculate:\n",
-    "\n",
-    "$\\Large \\frac{\\partial C}{\\partial w_2} = \\Large \\frac{\\partial x_2}{\\partial w_2} \\times \\frac{\\partial C}{\\partial x_2}  = x_1 \\times 2(x_2 - Υ)$\n",
-    "\n",
-    "while the new value for $w_2$ for the next iteration will be:\n",
-    "\n",
-    "$\\Large w_2' = w_2 - \\eta \\times  x_1 \\times 2(x_2 - Υ)$\n",
-    "\n",
-    "## Step 2: Calculate the next value for $\\Large w_1$\n",
-    "\n",
-    "Now, we need to calculate: $\\Large \\frac{\\partial C}{\\partial w_1}$ \n",
-    "\n",
-    "we think similarly to before but with one more trick! We will have to add one more\n",
-    "layer to our **chain** of derivations as follows:\n",
-    "\n",
-    "$\\Large \\frac{\\partial C}{\\partial w_1}$ \n",
-    "\n",
-    "\n",
-    "$\\Large \\frac{\\partial C}{\\partial w_1} = \\Large \\frac{\\partial ? }{\\partial w_1} \\times \\Large \\frac{\\partial x_2}{\\partial ?} \\times \\frac{\\partial C}{\\partial x_2}$\n",
-    "\n",
-    "Now is is easly to see that the question mark should be substituted by the ${\\Large \\partial x_1}$\n",
-    "\n",
-    "and our expression now it will become:\n",
-    "\n",
-    "$\\Large \\frac{\\partial C}{\\partial w_1} = \\Large \\frac{\\partial x_1 }{\\partial w_1} \\times \\Large \\frac{\\partial x_2}{\\partial x_1} \\times \\frac{\\partial C}{\\partial x_2}$\n",
-    "\n",
-    "\n",
-    "Since,\n",
-    "\n",
-    "$\\Large \\frac {\\partial x_1} {\\partial w_1}  = x_0$\n",
-    "\n",
-    "$\\Large \\frac {\\partial x_2} {\\partial x_1}  = w_2$\n",
-    "\n",
-    "$\\Large\\frac{\\partial C}{\\partial x_2} = 2(x_2 - Υ)$\n",
-    "\n",
-    "we have:\n",
-    "\n",
-    "$\\Large \\frac{\\partial C}{\\partial w_1} = x_0 \\times w_2 \\times 2(x_2 - Y)$ \n",
-    "\n",
-    "and \n",
-    "\n",
-    "$\\Large w_1' = w_1 - \\eta \\times  x_0 \\times w_2 \\times 2(x_2 - Y)$"
+    "\n"
    ]
   },
   {
@@ -989,43 +862,8 @@
     "between layers can easily by generalized using again the chain rule as we ca\n",
     "see here:\n",
     "\n",
-    "<img src=\"./images/two-x-nn.png\" style=\"width:520px;\"/>\"\n",
-    "\n",
-    "### Adding more hidden layers\n",
-    "\n",
-    "The process we have described above can now be generalized to cover as many\n",
-    "hidden layers we need.\n",
-    "\n",
-    "Here is how we can carry on the chain rule to any number of hidden layers.\n",
-    "\n",
-    "Try to understand how this is possible\n",
-    "\n",
-    "Hint: The key is to realize that the formula:\n",
-    "\n",
-    "$\\Large x_i = w_i \\times x_{i-1}$\n",
-    "\n",
-    "allows us to calculate both:\n",
-    "\n",
-    "$\\Large \\frac {\\partial x_i} {\\partial w_i} = x_{i-1}$\n",
-    "\n",
-    "and\n",
-    "\n",
-    "$\\Large \\\\frac {\\partial x_i} {\\partial x_{i-1}} = w_i$\n",
-    "\n",
-    "\n",
-    "\n",
-    "For example lets find the new weight $w_2$\n",
-    "\n",
-    "<img src=\"./images/nn-multiple-hidden-layers.png\" style=\"width:620px;\"/> \n"
+    "<img src=\"./images/two-x-nn.png\" style=\"width:520px;\"/>\"\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cf4076fa",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
